--- a/styles/components/_footer.sass
+++ b/styles/components/_footer.sass
@@ -6,6 +6,6 @@ footer
     padding: 2rem
     text-align: center
     margin-top: 5rem
-    @include mixins.ff-fs-cl(variaveis.$ft-texto, 1rem, variaveis.$cor-primaria)
+    @include mixins.ff-fs-cl(variaveis.$ft-textos, 1rem, variaveis.$cor-primaria)
 
 
