--- a/styles/components/_header.scss
+++ b/styles/components/_header.scss
@@ -80,3 +80,32 @@ header {
         }
     }
 }
+
+@media (max-width: 768px) {
+    header {
+        padding: 4rem 1rem 0 1rem;
+        nav {
+            ul {
+                padding: 0;
+            }
+        }
+        #home {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+
+            .textos-home {
+                display: flex;
+                flex-wrap: wrap;
+                justify-content: center;
+                margin-bottom: 25px;
+
+                h1 {
+                    text-align: center;
+                    font-size: 39px;
+                }
+            }
+
+        }
+    }
+}
