--- a/styles/components/_servicos.scss
+++ b/styles/components/_servicos.scss
@@ -25,3 +25,17 @@
         }
     }
 }
+
+@media (max-width: 425px) {
+    #servico {
+        margin: 5rem 0;
+    }
+}
+
+@media (max-width: 768px) {
+    #servico {
+        .cards {
+            display: grid;
+        }
+    }
+}
